--- a/_posts/2024-10-13-weinberg-2.5-solution.markdown
+++ b/_posts/2024-10-13-weinberg-2.5-solution.markdown
@@ -22,7 +22,7 @@ tags:
 
 ## $O(2,1)$ 群及其代数
 
-&emsp;&emsp;显然地，2+1维时空中的 Poincaré 对称性变为了在群 $O(2,1)$ 的变换下物理体系不变。所以我们先来研究群 $O(2,1)$ 的性质。如同群 $O(3,1)$ 的操作一样，群 $O(2,1)$ 有保三维度规 $\eta_{\mu\nu}=diag(-1,1,1)$ 的条件，即：
+&emsp;&emsp;显然地，2+1维时空中的 Poincaré 对称性变为了在群 $O(2,1)$ 的变换下物理体系不变。所以我们先来研究群 $O(2,1)$ 的性质。如同群 $O(3,1)$ 的操作一样，群 $O(2,1)$ 有保三维度规 `$\eta_{\mu\nu}=diag(-1,1,1)$` 的条件，即：
 
 $$
 	\eta_{\mu\nu}{\Lambda^{\mu}}_{\rho}{\Lambda^{\nu}}_{\sigma}=\eta_{\rho\sigma}    	
@@ -34,13 +34,13 @@ $$
 	U(\bar{\Lambda},\bar{a})U(\Lambda,a)=U(\bar{\Lambda}\Lambda,\bar{\Lambda}a+\bar{a})
 $$
 
-取无穷小变换 ${\Lambda^{\mu}}_{\nu}={\delta^\mu}_\nu+{\omega^\mu}_\nu$，$a^\rho=\varepsilon^\rho$，并将其展开为幂级数形式：
+取无穷小变换 `${\Lambda^{\mu}}_{\nu}={\delta^\mu}_\nu+{\omega^\mu}_\nu$`，`$a^\rho=\varepsilon^\rho$`，并将其展开为幂级数形式：
 
 $$
 	U(1+\omega,\varepsilon)=1+\frac{1}{2}i\omega_{\mu\nu}J^{\mu\nu}-i\varepsilon_{\rho}P^{\rho}+\cdot\cdot\cdot
 $$
 
-其中生成元 $J^{\mu\nu}$ 与 $P^{\rho}$ 仍旧是厄米算符，且 $\omega_{\mu\nu}$ 与 $J^{\mu\nu}$ 依然是反对称矩阵。考虑如下算式：
+其中生成元 `$J^{\mu\nu}$` 与 `$P^{\rho}$` 仍旧是厄米算符，且 `$\omega_{\mu\nu}$` 与 `$J^{\mu\nu}$` 依然是反对称矩阵。考虑如下算式：
 
 $$
 	U^{-1}(\Lambda,a)U(1+\omega,\varepsilon)U(\Lambda,a)
@@ -58,7 +58,7 @@ $$
 	1+\frac{1}{2}i\omega_{\rho\sigma}\left({\Lambda^{\rho}}_{\mu}{\Lambda^{\sigma}}_{\nu}J^{\mu\nu}-{\Lambda^{\rho}}_{\lambda}a^{\sigma}P^{\lambda}\right)-i\varepsilon_{\rho}{\Lambda^{\rho}}_{\lambda}P^{\lambda}
 $$
 
-使二者相等，并注意使用 $\omega_{\mu\nu}$ 的反对称性，我们可以得到：
+使二者相等，并注意使用 `$\omega_{\mu\nu}$` 的反对称性，我们可以得到：
 
 $$
 	U^{-1}(\Lambda,a)J^{\rho\sigma}U(\Lambda,a)
@@ -71,7 +71,7 @@ $$
 	U^{-1}(\Lambda,a)P^{\lambda}U(\Lambda,a)={\Lambda^{\lambda}}_{\rho}P^{\rho}
 $$
 
-再次取另一组无穷小变换 ${\Lambda^{\mu}}_{\nu}={\delta^\mu}_\nu+{\omega^\mu}_\nu$，$a^\rho=\varepsilon^\rho$，同样注意使用 $\omega_{\mu\nu}$ 的反对称性，我们便可以计算出其生成元的对易关系（看起来和 $O(3,1)$ 的没什么两样）：
+再次取另一组无穷小变换 `${\Lambda^{\mu}}_{\nu}={\delta^\mu}_\nu+{\omega^\mu}_\nu$` ，`$a^\rho=\varepsilon^\rho$` ，同样注意使用 `$\omega_{\mu\nu}$` 的反对称性，我们便可以计算出其生成元的对易关系（看起来和 $O(3,1)$ 的没什么两样）：
 
 $$
 \begin{aligned}
@@ -80,7 +80,7 @@ $$
 \end{aligned}
 $$
 
-但由于缺少了一个空间维度，实际上的 $J^{\mu\nu}$ 仅剩下了三个独立分量 $J^{01}、J^{02}、J^{12}$，其中前两个对应于 Boost 变换的生成元，而第三个则对应于子群 $SO(2)$ 中的唯一转动生成元。因而实际上的对易关系与3+1维时空中的不大一样。
+但由于缺少了一个空间维度，实际上的 `$J^{\mu\nu}$` 仅剩下了三个独立分量 `$J^{01}、J^{02}、J^{12}$`，其中前两个对应于 Boost 变换的生成元，而第三个则对应于子群 $SO(2)$ 中的唯一转动生成元。因而实际上的对易关系与3+1维时空中的不大一样。
 
 ## 有质量单粒子态
 
@@ -90,49 +90,49 @@ $$
 
 $$
 \begin{aligned}
-	P^{\mu}U(\Lambda)|p,\sigma\rangle&=U(\Lambda)U^{-1}(\Lambda)P^{\mu}U(\Lambda)|p,\sigma\rangle
-    \\&=U(\Lambda){\Lambda^{\mu}}_{\nu}P^{\nu}|p,\sigma\rangle
-    \\&={\Lambda^{\mu}}_{\nu}p^{\nu}U(\Lambda)|p,\sigma\rangle
+	P^{\mu}U(\Lambda)\vert p,\sigma\rangle&=U(\Lambda)U^{-1}(\Lambda)P^{\mu}U(\Lambda)\vert p,\sigma\rangle
+    \\&=U(\Lambda){\Lambda^{\mu}}_{\nu}P^{\nu}\vert p,\sigma\rangle
+    \\&={\Lambda^{\mu}}_{\nu}p^{\nu}U(\Lambda)\vert p,\sigma\rangle
 \end{aligned}
 $$
 
-可见 $U(\Lambda)$ 使一动量为 $p^{\mu}$ 的单粒子态变为动量为 ${\Lambda^{\mu}}_{\nu}p^{\nu}$ 的单粒子态。因而我们有：
+可见 $U(\Lambda)$ 使一动量为 $p^{\mu}$ 的单粒子态变为动量为 `${\Lambda^{\mu}}_{\nu}p^{\nu}$` 的单粒子态。因而我们有：
 
 $$
-	U(\Lambda)|p,\sigma\rangle=\sum_{\sigma'}C_{\sigma'\sigma}|p,\sigma'\rangle
+	U(\Lambda)\vert p,\sigma\rangle=\sum_{\sigma'}C_{\sigma'\sigma}\vert p,\sigma'\rangle
 $$
 
-效仿 Weinberg 的做法，我们仍旧使用小群（迷向子群）来获得 $U(\Lambda)$ 的表示。小群被定义为保标准动量 $k^{\mu}$ 不变的 Lorentz 子群。对于有质量粒子，自然地选择标准动量为 $k^{\mu}=(M,0,0)$，以及标准 Lorentz 变换 $L(p)$，使得有 ${L(p)^{\mu}}_{\nu}k^\nu=p^{\mu}$. 2+1维时空中有质量粒子的小群为 $SO(2)$，即我们最熟悉的二维旋转群。 定义一般动量态为：
+效仿 Weinberg 的做法，我们仍旧使用小群（迷向子群）来获得 $U(\Lambda)$ 的表示。小群被定义为保标准动量 $k^{\mu}$ 不变的 Lorentz 子群。对于有质量粒子，自然地选择标准动量为 $k^{\mu}=(M,0,0)$，以及标准 Lorentz 变换 $L(p)$，使得有 `${L(p)^{\mu}}_{\nu}k^\nu=p^{\mu}$`. 2+1维时空中有质量粒子的小群为 $SO(2)$，即我们最熟悉的二维旋转群。 定义一般动量态为：
 
 $$
-	|p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}U(L(p))|k,\sigma\rangle
+	\vert p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}U(L(p))\vert k,\sigma\rangle
 $$
 
 其中 $\sqrt{\frac{\Lambda{p^0}}{p^0}}$ 是归一化系数。容易得到：
 
 $$
 \begin{aligned}
-	&U(\Lambda)|p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}U(\Lambda{L(p)})|k,\sigma\rangle
-    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(L(\Lambda{p})L^{-1}(\Lambda{p})\Lambda{L(p)}\right)|k,\sigma\rangle
+	&U(\Lambda)\vert p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}U(\Lambda{L(p)})\vert k,\sigma\rangle
+    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(L(\Lambda{p})L^{-1}(\Lambda{p})\Lambda{L(p)}\right)\vert k,\sigma\rangle
 \end{aligned}
 $$
 
-容易看出 $L^{-1}(\Lambda{p})\Lambda{L(p)}$ 是保 $k^{\mu}$ 不变的，因而其属于小群 $SO(2)$. 对于小群任意群元 $W$ 的幺正表示，我们总有：
+容易看出 `$L^{-1}(\Lambda{p})\Lambda{L(p)}$` 是保 $k^{\mu}$ 不变的，因而其属于小群 $SO(2)$. 对于小群任意群元 $W$ 的幺正表示，我们总有：
 
 $$
-	U(W)|k,\sigma\rangle=\sum_{\sigma'}D(W)_{\sigma'\sigma}|k,\sigma'\rangle
+	U(W)\vert k,\sigma\rangle=\sum_{\sigma'}D(W)_{\sigma'\sigma}\vert k,\sigma'\rangle
 $$
 
-其中 $D(W)_{\sigma'\sigma}$ 是幺正算符 $U(W)$ 的矩阵元。因而我们有：
+其中 `$D(W)_{\sigma'\sigma}$` 是幺正算符 $U(W)$ 的矩阵元。因而我们有：
 
 $$
-	U(\Lambda)|p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\sum_{\sigma'}D(W)_{\sigma'\sigma}|\Lambda{p},\sigma\rangle
+	U(\Lambda)\vert p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\sum_{\sigma'}D(W)_{\sigma'\sigma}\vert \Lambda{p},\sigma\rangle
 $$
 
-由于2+1维情况下小群是 $SO(2)$，所以这种情况的矩阵元 $D(W)_{\sigma'\sigma}$ 是显然的，即 $\exp(i\theta\sigma)\delta_{\sigma'\sigma}$，其中 $\theta=\theta(\Lambda,p)$ 依赖于动量与 Lorentz 变换。因此，我们得到了2+1维中有质量单粒子态在 Lorentz 变换下的行为：
+由于2+1维情况下小群是 $SO(2)$，所以这种情况的矩阵元 `$D(W)_{\sigma'\sigma}$` 是显然的，即 `$\exp(i\theta\sigma)\delta_{\sigma'\sigma}$`，其中 `$\theta=\theta(\Lambda,p)$` 依赖于动量与 Lorentz 变换。因此，我们得到了2+1维中有质量单粒子态在 Lorentz 变换下的行为：
 
 $$
-	U(\Lambda)|p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\exp(i\theta\sigma)|\Lambda{p},\sigma\rangle
+	U(\Lambda)\vert p,\sigma\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\exp(i\theta\sigma)\vert \Lambda{p},\sigma\rangle
 $$
 
 ### 反演变换
@@ -194,62 +194,62 @@ $$
 因此我们有：
 
 $$
-	P^{\mu}\mathcal{P}|k,\sigma\rangle=\mathcal{P}(H,-\mathbf{P})|k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{P}|k,\sigma\rangle
+	P^{\mu}\mathcal{P}\vert k,\sigma\rangle=\mathcal{P}(H,-\mathbf{P})\vert k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{P}\vert k,\sigma\rangle
 $$
 
 以及：
 
 $$
-	J^{12}\mathcal{P}|k,\sigma\rangle=\mathcal{P}J^{12}|k,\sigma\rangle=\sigma\mathcal{P}|k,\sigma\rangle
+	J^{12}\mathcal{P}\vert k,\sigma\rangle=\mathcal{P}J^{12}\vert k,\sigma\rangle=\sigma\mathcal{P}\vert k,\sigma\rangle
 $$
 
 容易看出，对于有质量粒子，$\mathcal{P}$ 不改变 $P^{\mu}$ 与 $J^{12}$ 的本征值。因此，我们只能有：
 
 $$
-	\mathcal{P}|k,\sigma\rangle=\eta_{\sigma}|k,\sigma\rangle
+	\mathcal{P}\vert k,\sigma\rangle=\eta_{\sigma}\vert k,\sigma\rangle
 $$
 
 并且我们有：
 
 $$
 \begin{aligned}
-	\mathcal{P}|p,\sigma\rangle&=\sqrt{\frac{M}{p^0}}U\left(\mathscr{P}L(p)\mathscr{P}^{-1}\right)\mathcal{P}|k,\sigma\rangle
-    \\&=\eta_{\sigma}\sqrt{\frac{M}{p^0}}U(L(\mathscr{P}p))|k,\sigma\rangle
-    \\&=\eta_{\sigma}|\mathscr{P}p,\sigma\rangle
+	\mathcal{P}\vert p,\sigma\rangle&=\sqrt{\frac{M}{p^0}}U\left(\mathscr{P}L(p)\mathscr{P}^{-1}\right)\mathcal{P}\vert k,\sigma\rangle
+    \\&=\eta_{\sigma}\sqrt{\frac{M}{p^0}}U(L(\mathscr{P}p))\vert k,\sigma\rangle
+    \\&=\eta_{\sigma}\vert \mathscr{P}p,\sigma\rangle
 \end{aligned}
 $$
 
-其中 $\eta_{\sigma}$ 是一个模为 $1$ 的相位。但由于2+1维时空中似乎并不存在其余与 $\sigma$ 相关的算符，笔者无法仿照3+1维时空中那样判断 $\eta_{\sigma}$ 是否与 $\sigma$ 无关。若读者有想法欢迎来讨论。
+其中 `$\eta_{\sigma}$` 是一个模为 $1$ 的相位。但由于2+1维时空中似乎并不存在其余与 $\sigma$ 相关的算符，笔者无法仿照3+1维时空中那样判断 `$\eta_{\sigma}$` 是否与 $\sigma$ 无关。若读者有想法欢迎来讨论。
 
 类似的，我们有：
 
 $$
-	P^{\mu}\mathcal{T}|k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{T}|k,\sigma\rangle
+	P^{\mu}\mathcal{T}\vert k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{T}\vert k,\sigma\rangle
 $$
 
 以及：
 
 $$
-	J^{12}\mathcal{T}|k,\sigma\rangle=-\mathcal{T}J^{12}|k,\sigma\rangle=-\sigma\mathcal{T}|k,\sigma\rangle
+	J^{12}\mathcal{T}\vert k,\sigma\rangle=-\mathcal{T}J^{12}\vert k,\sigma\rangle=-\sigma\mathcal{T}\vert k,\sigma\rangle
 $$
 
 可见我们有：
 
 $$
-	\mathcal{T}|k,\sigma\rangle=\zeta_{\sigma}|k,-\sigma\rangle
+	\mathcal{T}\vert k,\sigma\rangle=\zeta_{\sigma}\vert k,-\sigma\rangle
 $$
 
 以及：
 
 $$
 \begin{aligned}
-	\mathcal{T}|p,\sigma\rangle&=\sqrt{\frac{M}{p^0}}U\left(\mathscr{T}L(p)\mathscr{T}^{-1}\right)\mathcal{T}|k,\sigma\rangle
-    \\&=\zeta_{\sigma}\sqrt{\frac{M}{p^0}}U(L(\mathscr{P}p))|k,-\sigma\rangle
-    \\&=\zeta_{\sigma}|\mathscr{P}p,-\sigma\rangle
+	\mathcal{T}\vert p,\sigma\rangle&=\sqrt{\frac{M}{p^0}}U\left(\mathscr{T}L(p)\mathscr{T}^{-1}\right)\mathcal{T}\vert k,\sigma\rangle
+    \\&=\zeta_{\sigma}\sqrt{\frac{M}{p^0}}U(L(\mathscr{P}p))\vert k,-\sigma\rangle
+    \\&=\zeta_{\sigma}\vert \mathscr{P}p,-\sigma\rangle
 \end{aligned}
 $$
 
-这里的 $\zeta_{\sigma}$ 同样为一个模为 $1$ 的相位。虽然我们仍不知道 $\zeta$ 与 $\sigma$ 的依赖关系，但我们可以重定义 $|k,\sigma\rangle'=\zeta^{1/2}|k,\sigma\rangle$ 来消去这个模长，因而其不具有物理意义。
+这里的 $\zeta_{\sigma}$ 同样为一个模为 $1$ 的相位。虽然我们仍不知道 $\zeta$ 与 $\sigma$ 的依赖关系，但我们可以重定义 $\vert k,\sigma\rangle'=\zeta^{1/2}{\vert }k,\sigma\rangle$ 来消去这个模长，因而其不具有物理意义。
 
 ## 无质量单粒子态
 
@@ -258,7 +258,7 @@ $$
 &emsp;&emsp;对于2+1维的无质量单粒子态，取 $k^{\mu}=(\kappa,0,\kappa)$. 其小群为 $ISO(1)=E(1)$. 该群的表示会导致无质量粒子要么仅有一个连续的“自旋/螺旋度”来标记不同单粒子态，要么不存在可以区分不同单粒子态的“自旋/螺旋度”，仅能依靠其统计性质区分粒子。在这里我们仍旧不希望出现连续的自由度来标记不同粒子态，因而笔者选择了直接使用动量作为区分2+1维单粒子态的唯一自由度，即：
 
 $$
-	U(\Lambda)|p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}|\Lambda{p}\rangle
+	U(\Lambda)\vert p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\vert \Lambda{p}\rangle
 $$
 
 （这样的选择不一定完全合理，如有其他想法欢迎和笔者讨论交流。）
@@ -271,42 +271,42 @@ $$
 我们仍旧有：
 
 $$
-	P^{\mu}\mathcal{P}|k,\sigma\rangle=\mathcal{P}(H,-\mathbf{P})|k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{P}|k,\sigma\rangle
+	P^{\mu}\mathcal{P}\vert k,\sigma\rangle=\mathcal{P}(H,-\mathbf{P})\vert k,\sigma\rangle={\mathscr{P}^{\mu}}_{\nu}k^{\nu}\mathcal{P}\vert k,\sigma\rangle
 $$
 
-但在无质量情况下 $\mathbf{P}\neq0$ 因而 $\mathcal{P}$ 改变了 $k^{\mu}$. 同样为了方便，我们考虑算符 $U(R_{3}^{-1})\mathcal{P}$，其中 $U(R_3)=\exp(i\pi{J^{12}})$ 为180°旋转变换，其将 $-\mathbf{P}$ 变回 $\mathbf{P}$. 因而 $U(R_{3}^{-1})\mathcal{P}$ 保 $k^{\mu}$ 不变。于是我们有：
+但在无质量情况下 $\mathbf{P}\neq0$ 因而 $\mathcal{P}$ 改变了 $k^{\mu}$. 同样为了方便，我们考虑算符 `$U(R_{3}^{-1})\mathcal{P}$`，其中 `$U(R_3)=\exp(i\pi{J^{12}})$` 为180°旋转变换，其将 $-\mathbf{P}$ 变回 $\mathbf{P}$. 因而 `$U(R_{3}^{-1})\mathcal{P}$` 保 $k^{\mu}$ 不变。于是我们有：
 
 $$
-	U(R_{3}^{-1})\mathcal{P}|k\rangle=\eta|k\rangle
+	U(R_{3}^{-1})\mathcal{P}\vert k\rangle=\eta\vert k\rangle
 $$
 
 进一步计算一般动量态，有：
 
 $$
-	\mathcal{P}|p\rangle=\mathcal{P}\sqrt{\frac{\Lambda{p^0}}{p^0}}U(L(p))|k\rangle
+	\mathcal{P}\vert p\rangle=\mathcal{P}\sqrt{\frac{\Lambda{p^0}}{p^0}}U(L(p))\vert k\rangle
 $$
 
-仍旧取 $L(p)=R(\hat{\mathbf{p}})B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)$，其中 $B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)$ 是在2-方向上的 Boost 而 $R(\hat{\mathbf{p}})=\exp(i\theta{J^{12}})$ 使 2-方向转向 $\hat{\mathbf{p}}$ 方向。因此有：
+仍旧取 `$L(p)=R(\hat{\mathbf{p}})B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)$`，其中 `$B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)$` 是在2-方向上的 Boost 而 `$R(\hat{\mathbf{p}})=\exp(i\theta{J^{12}})$` 使 2-方向转向 $\hat{\mathbf{p}}$ 方向。因此有：
 
 $$
 \begin{aligned}
-	\mathcal{P}|p\rangle&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(\mathscr{P}R(\hat{\mathbf{p}})B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)\right)|k\rangle
-    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}R_{3}^{-1}\mathscr{P}B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)\right)|k\rangle
-    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)\right)U(R_{3}^{-1}\mathscr{P})|k\rangle
-    \\&=\eta\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}B\left(\frac{|\hat{\mathbf{p}}|}{\kappa}\right)\right)|k\rangle
+	\mathcal{P}\vert p\rangle&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(\mathscr{P}R(\hat{\mathbf{p}})B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)\right)\vert k\rangle
+    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}R_{3}^{-1}\mathscr{P}B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)\right)\vert k\rangle
+    \\&=\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)\right)U(R_{3}^{-1}\mathscr{P})\vert k\rangle
+    \\&=\eta\sqrt{\frac{\Lambda{p^0}}{p^0}}U\left(R(\hat{\mathbf{p}})R_{3}B\left(\frac{\vert \hat{\mathbf{p}}\vert }{\kappa}\right)\right)\vert k\rangle
 \end{aligned}
 $$
 
-不同于3+1维情况额外多出的一个旋转，这里的 $R(\hat{\mathbf{p}})R_{3}$ 刚好就是 $R(-\hat{\mathbf{p}})$. 因此，我们可以直接得到：
+不同于3+1维情况额外多出的一个旋转，这里的 `$R(\hat{\mathbf{p}})R_{3}$` 刚好就是 `$R(-\hat{\mathbf{p}})$`. 因此，我们可以直接得到：
 
 $$
-	\mathcal{P}|p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\eta|\mathscr{P}p\rangle
+	\mathcal{P}\vert p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\eta\vert \mathscr{P}p\rangle
 $$
 
 类似的，对于时间反演算符，我们可以得到：
 
 $$
-	\mathcal{T}|p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\zeta|\mathscr{P}p\rangle
+	\mathcal{T}\vert p\rangle=\sqrt{\frac{\Lambda{p^0}}{p^0}}\zeta\vert \mathscr{P}p\rangle
 $$
 
 ----
